fix(zna-link): correct mobile truncation

--- a/src/components/ZNALink/ZNALink.module.scss
+++ b/src/components/ZNALink/ZNALink.module.scss
@@ -72,6 +72,15 @@
 		content: '';
 	}
 
+	.ZNALink > a:nth-last-child(1) {
+		display: block !important;
+		content: '';
+
+		&:before {
+			content: '..' !important;
+		}
+	}
+
 	.isRootWithSubdomain {
 		a:not(:first-of-type) ~ a:last-of-type::before {
 			content: '..';
